Wed Apr 16 11:14:32 2003  George Lebl <jirka@5z.com>

	* src/compil.c: kill useless assert

	* lib/calculus/integration.gel: add NumericalIntegral which calls
	  some integral rule with steps as set by the parameters

Wed Apr 16 11:03:54 2003  George Lebl <jirka@5z.com>

	* lib/calculus/integration.gel: add MidpointRule to make quicker
	  calculations

Mon Apr 14 14:35:39 2003  George Lebl <jirka@5z.com>

	* src/parse.y: allow return after comma to break a long vector input

	* lib/number_theory/misc.gel: add ConvertToBase and ConvertFromBase

Mon Mar 24 22:07:33 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/modulus.gel: add reference for the
	  DiscreteLog algorithm, add IsPrimitiveMod function

Mon Mar 24 21:54:11 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/misc.gel, lib/number_theory/modulus.gel,
	  src/geniustests.txt:  Implemented CRT (ChineseRemainder) and
	  DiscreteLog (Silver-Pohlig-Hellman for F_q where q a prime) 
	  for homework.  Should really be built in, but for now we have to
	  get by with this.

Mon Mar 24 15:04:43 2003  George Lebl <jirka@5z.com>

	* src/eval.c: mod matrices after primitives, and add a fixme,
	  most operations already do modding so this is not very efficent,
	  but at least it's correct for now.  Fixes for example
	  "-[1] mod 2"

Mon Mar 24 14:31:29 2003  George Lebl <jirka@5z.com>

	* src/dict.c, src/eval.c: fix var substitution crash, and add
	  some memory debug friendliness

Mon Mar 10 13:10:57 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel, lib/number_theory/misc.gel:
	  add AreRelativelyPrime function and fix the IsStrongPseudoprime
	  function

	* src/geniustests.txt: add some tests

	* lib/number_theory/misc.gel: add LeastAbsoluteResidue function

Mon Mar 10 11:49:22 2003  George Lebl <jirka@5z.com>

	* src/funclib.c, src/eval.[ch], src/mpwrap.[ch]:  Add IsEven and
	  IsOdd using the native gmp functions for speed improvement.  Also