@@ -1,3 +1,8 @@
+Mon Apr 21 20:23:01 2003  George Lebl <jirka@5z.com>
+
+	* src/funclib.c: elements, rows, columns accept
+	  null and treat it as 0x0 matrix
+
 Wed Apr 16 11:14:32 2003  George Lebl <jirka@5z.com>
 
 	* src/compil.c: kill useless assert
